--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-eisenhowser-matrix",
+  "name": "fewd-804-final",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
